Add simple testing

--- a/day-9/CMakeLists.txt
+++ b/day-9/CMakeLists.txt
@@ -5,10 +5,13 @@ project(RopePhysics)
 set(SRC_DIR "${CMAKE_CURRENT_LIST_DIR}/src")
 set(SOURCES "${SRC_DIR}/main.cpp")
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 include_directories(lib)
 add_subdirectory(lib/coords)
 add_subdirectory(lib/split)
 add_subdirectory(lib/rope)
+add_subdirectory(tests)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
@@ -18,5 +21,4 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     CXX_STANDARD 20
     CXX_STANDARD_REQUIRED ON
     CXX_EXTENSIONS OFF
-	CMAKE_EXPORT_COMPILE_COMMANDS ON
 )
