Add LANGUAGES to project

--- a/day-9/lib/rope/CMakeLists.txt
+++ b/day-9/lib/rope/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.26)
 
-project(rope)
+project(rope LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 
 add_library(rope rope.cpp)
